--- a/FlaskApiFrontend/static/main.css
+++ b/FlaskApiFrontend/static/main.css
@@ -86,3 +86,17 @@ a.article-title:hover {
 .table-fitting th {
   padding: 0 12px 0 0;
 }
+
+.table-header-formatting {
+  font-weight: bold;
+}
+
+.error-message {
+  padding: 15px;
+  background-color: #ea4c41;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #ff1000;
+  color: white;
+  margin-bottom: 15px;
+}
