--- a/FlaskApiFrontend/templates/Airports/airportUpdate.html
+++ b/FlaskApiFrontend/templates/Airports/airportUpdate.html
@@ -2,9 +2,12 @@
 {% block content %}
   <h1>Update Airport Name</h1><br>
   <form action = "/airports/{{airport.id}}/edit" method = "POST">
-    <p>ID (fixed): <input type="text" name="id" value="{{ airport.id }}" readonly/></p>
-    <p>City: <input type = "text" name = "city" value = "{{ airport.city }}"/></p>
+
+    <p>Airport ID:  [{{ airport.id }}]</p>
+
+    <label for="input_city">City Name: </label>
+    <input type = "text" name = "city" id = "input_city" value = "{{ airport.city }}"/>
+
     <p><input type = "submit" value = "submit" /></p>
   </form>
-  </html>
 {% endblock content %}
