--- a/FlaskApiFrontend/templates/Airports/airports.html
+++ b/FlaskApiFrontend/templates/Airports/airports.html
@@ -5,12 +5,16 @@
     {% for airport in airports %}
     <tr><td>
       <div class="media-body">
-        <a class="article-title" href="/airports/{{airport.id}}"> > {{ airport.city }}</a>
+        <a class="article-title" href="/airports/{{airport.id}}">
+          [{{ airport.id }}] {{ airport.city }}</a>
       </div>
     </td></tr>
     {% endfor %}
   </table>
   <br><form action="/airports/new" method="GET">
     <input type = "submit" value = "Create New"/>
+  </form>
+  <br><form action="/home" method="GET">
+    <input type="submit" value="Back"/>
   </form>
 {% endblock content %}
