--- a/FlaskApiFrontend/templates/layout.html
+++ b/FlaskApiFrontend/templates/layout.html
@@ -25,7 +25,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarToggle">
         <div class="navbar-nav mr-auto">
-          <a class="nav-item nav-link" href="/">Home</a>
+          <a class="nav-item nav-link" href="/home">Home</a>
           <a class="nav-item nav-link" href="/about">About</a>
         </div>
         <!-- Navbar Right Side -->
@@ -40,6 +40,11 @@
 <main role="main" class="container">
   <div class="row">
     <div class="col-md-8">
+      {% if errormsg %}
+        <div class="error-message">
+          {{ errormsg }}
+        </div>
+      {% endif %}
       {% block content %}{% endblock %}
     </div>
   </div>
